# irrigation-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: sample_data.csv
src/irrigation_detection/: __init__.py  cli.py  detection.py  models.py
